--- a/7Serial/CMakeLists.txt
+++ b/7Serial/CMakeLists.txt
@@ -4,7 +4,7 @@ project(chuankou VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(chuankou main.cpp)
+add_executable(hhh main.cpp)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
